syntax = "proto3";

package server.account;

import "shared/error_type.proto";

// Endpoint not exposed to client.
message UpsertPlaidAccountsRequest {
  message PlaidAccount {
    int32 user_id = 1; // required

    int32 link_id = 2; // required

    string plaid_account_id = 3; // required

    string mask = 4;

    string name = 5; // required

    string official_name = 6;

    string subtype = 7; // required

    string type = 8; // required

    string verification_status = 9; // required

    float balance_available = 10; // required

    float balance_current = 11; // required

    float balance_limit = 12; // required

    string balance_iso_currency_code = 13; // required

    string balance_unofficial_currency_code = 14; // required

    bool manually_created = 15;

    bool hidden = 16;
  }
  repeated PlaidAccount accounts = 1; // required
}

message UpsertPlaidAccountsResponse {
  message Result {
    string plaid_account_id = 1;

    // If unset, successful.
    shared.ErrorType error_type = 2;
  }
  repeated Result results = 1;
}

